code cleanup & logout endpoint
